--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,14 +23,15 @@ services:
 
   nginx:
     image: nginx:latest
+    container_name: nginx
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx:/etc/nginx/conf.d
-      - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
-      - flask-app # ensure flask_app starts before nginx
+      - flask_app # ensure flask_app starts before nginx
+    volumes:
+      - ./nginx/bop-dropper.conf:/etc/nginx/conf.d/default.conf
+      - ./certs:/etc/letsencrypt
 
 volumes:
   bop_data:
