--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,12 +32,12 @@ services:
     container_name: nginx
     ports:
       - "80:80"
-      # - "443:443"
+      - "443:443"
     depends_on:
       - flask_app # ensure flask_app starts before nginx
     volumes:
       - ./nginx/bop-dropper.conf:/etc/nginx/conf.d/default.conf
-      # - ./certs:/etc/letsencrypt
+      - ./certs:/etc/letsencrypt
 
 volumes:
   bop_data:
