--- a/nginx/bop-dropper.conf
+++ b/nginx/bop-dropper.conf
@@ -10,17 +10,17 @@ server {
     }
 }
 
-# server {
-#     listen 443 ssl;
-#     server_name bopdropper.com www.bopdropper.com;
+server {
+    listen 443 ssl;
+    server_name bopdropper.com www.bopdropper.com;
 
-#     ssl_certificate /etc/letsencrypt/live/bopdropper.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/bopdropper.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/bopdropper.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bopdropper.com/privkey.pem;
 
-#     location / {
-#         proxy_pass http://localhost:5000;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#     }
-# }
+    location / {
+        proxy_pass http://localhost:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
