--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
   nginx:
     image: nginx:latest
     container_name: nginx
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
@@ -37,7 +38,7 @@ services:
       - flask_app # ensure flask_app starts before nginx
     volumes:
       - ./nginx/bop-dropper.conf:/etc/nginx/conf.d/default.conf
-      - ./certs:/etc/letsencrypt
+      - /etc/letsencrypt:/etc/letsencrypt
 
 volumes:
   bop_data:
