--- a/nginx/bop-dropper.conf
+++ b/nginx/bop-dropper.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name bopdropper.com www.bopdropper.com;
 
+    # Rediredt to HTTPS
+    return 301 https://$host$request_uri;
+
     location / {
         proxy_pass http://flask_app:5000;
         proxy_set_header Host $host;
