--- a/nginx/bop-dropper.conf
+++ b/nginx/bop-dropper.conf
@@ -21,7 +21,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/bopdropper.com/privkey.pem;
 
     location / {
-        proxy_pass http://localhost:5000;
+        proxy_pass http://flask_app:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
