--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - FLASK_ENV=development
     env_file:
       - .env
+    volumes:
+      - .:/app
 
   mongo:
     image: mongo:8.0
