--- a/nginx/bop-dropper.conf
+++ b/nginx/bop-dropper.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name bopdropper.com www.bopdropper.com;
 
-    # Rediredt to HTTPS
+    # Redirect to HTTPS
     return 301 https://$host$request_uri;
 
     location / {
