--- a/nginx/bop-dropper.conf
+++ b/nginx/bop-dropper.conf
@@ -2,15 +2,18 @@ server {
     listen 80;
     server_name bopdropper.com www.bopdropper.com;
 
-    # Redirect to HTTPS
-    return 301 https://$host$request_uri;
-
-    location / {
-        proxy_pass http://flask_app:5000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # block direct access to sensitive files & bot spam
+    location ~ /\.(git|env|htaccess) {
+        deny all;
+        return 403;
     }
+    location ~* (phpunit|eval-stdin|vendor/|think/|public/index.php|admin/) {
+        deny all;
+        return 403;
+    }
+
+    # redirect to HTTPS
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -20,6 +23,16 @@ server {
     ssl_certificate /etc/letsencrypt/live/bopdropper.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/bopdropper.com/privkey.pem;
 
+    # block direct access to sensitive files & bot spam
+    location ~ /\.(git|env|htaccess) {
+        deny all;
+        return 403;
+    }
+    location ~* (phpunit|eval-stdin|vendor/|think/|public/index.php|admin/) {
+        deny all;
+        return 403;
+    }
+    
     location / {
         proxy_pass http://flask_app:5000;
         proxy_set_header Host $host;
